--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,8 @@
         <div id="app"></div>
 
         <div id="loading" class="text-center" style="margin:1px; position:relative; top:15vh; background:url('/assets/background.jpg'); background-color: #3d1714; background-position: center; background-size:cover;">
+            <img src="/assets/logo.webp" width="500"><br>
+            <br>
             <i class="fa fa-refresh fa-spin fa-4x"></i><br>
             <h3>LOADING</h3><br>
             <br><br><br>
