--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- endinject -->
 
     <script>
+        var html = (s) => {return s[0];};
         var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
         var isPhoneApp = false;
         var isDesktopApp = false;
