Implemented building selection.

--- a/public/index.html
+++ b/public/index.html
@@ -164,6 +164,7 @@
 <script src="data.js"></script>
 <script src="game.js"></script>
 <script src="menu/services/api.js"></script>
+<script src="menu/components/mixins.js"></script>
 <script src="menu/components/resourceIcon.js"></script>
 <script src="menu/components/gameMenu.js"></script>
 <script src="menu/components/buildMenu.js"></script>
