Added saving and loading.

--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,7 @@
 <script src="vendor/vue-dragscroll.min.js"></script>
 <script src="vendor/pixi-layers.js"></script>
 <script src="vendor/pixi-lights.js"></script>
+<script src="vendor/bezier.js"></script>
 
 <script src="filters.js"></script>
 <script src="data.js"></script>
