Updated about. Updated descriptions. Added screenshot.

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <title>Foxhole Facility Planner</title>
+    <meta name="description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
+
+    <meta property="og:title" content="Foxhole Facility Planner"/>
+    <meta property="og:url" content="https://facilityplanner.com/"/>
+    <meta property="og:type" content="product"/>
+    <meta property="og:description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
+    <meta property="og:image" content="https://facilityplanner.com/assets/screenshot1.jpg"/>
 
     <meta charset="utf-8">
     <base href="/">
@@ -142,6 +149,28 @@
                     <p>+ Initial release</p>
                     <hr>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal modal-fullscreen" id="aboutModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"><i class="fa fa-question-mark-circle"></i> About</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h3>
+                    Foxhole Facility Planner
+                </h3>
+                <p>
+                    Foxhole Facility Planner is a tool that allows you to draw up plans for facilities from Foxhole's new Inferno update.
+                </p>
+                <a href="https://bombsightgames.com/">Bombsight Games</a>
             </div>
         </div>
     </div>
