--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
 
     <meta property="og:title" content="Foxhole Facility Planner"/>
-    <meta property="og:url" content="https://facilityplanner.com/"/>
+    <meta property="og:url" content="https://foxholeplanner.com/"/>
     <meta property="og:type" content="product"/>
     <meta property="og:description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
-    <meta property="og:image" content="https://facilityplanner.com/assets/screenshot1.jpg"/>
+    <meta property="og:image" content="https://foxholeplanner.com/assets/screenshot1.jpg"/>
 
     <meta charset="utf-8">
     <base href="/">
