Added Google Analytics to track usage.

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
     <link href="styles.css" rel="stylesheet">
     <!-- endinject -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FM4VKRLTJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-3FM4VKRLTJ');
+    </script>
+
     <script>
         var html = (s) => {return s[0];};
         var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
