Added range display for maintenance tunnel and cranes. Added mobile message.

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
     <div style="pointer-events:auto!important;">
         <div id="app"></div>
 
-        <div id="loading" class="text-center" style="margin:1px; position:relative; top:15vh; background:url('/assets/background.jpg'); background-color: #3d1714; background-position: center; background-size:cover;">
+        <div id="loading" class="text-center" style="margin:1px; position:relative; top:15vh; background:url('/assets/background.jpg'); background-color: #3f3f3f; background-position: center; background-size:cover;">
             <img src="/assets/logo.webp" width="500"><br>
             <br>
             <i class="fa fa-refresh fa-spin fa-4x"></i><br>
@@ -132,8 +132,13 @@
 
 <div id="mobile-disabled-message" style="display:none;">
     <div class="loading-overlay-text">
+        <br>
+        <img src="/assets/logo.webp" style="max-width:500px; width:90%;"><br>
         <br><br>
-        <h4>Mobile support is not available yet!</h4>
+        <h4>
+            Mobile support is not available!<br>
+            <br>
+            Please try this out on a desktop computer.</h4>
         <br>
     </div>
 </div>
