--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,7 @@
 <script src="vendor/pixi-layers.js"></script>
 <script src="vendor/pixi-lights.js"></script>
 <script src="vendor/bezier.js"></script>
+<script src="vendor/SAT.js"></script>
 
 <script src="filters.js"></script>
 <script src="foxholeData.js"></script>
