Added structure hitboxes.

--- a/public/index.html
+++ b/public/index.html
@@ -205,6 +205,7 @@
 <script src="vendor/pixi-lights.js"></script>
 <script src="vendor/bezier.js"></script>
 <script src="vendor/SAT.js"></script>
+<script src="vendor/hitarea-shapes.min.js"></script>
 
 <script src="filters.js"></script>
 <script src="foxholeData.js"></script>
