Updated logos / loading screen, unlocked trains, and fixes.

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Foxhole Facility Planner</title>
+    <title>Foxhole Planner</title>
     <meta name="description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
 
-    <meta property="og:title" content="Foxhole Facility Planner"/>
+    <meta property="og:title" content="Foxhole Planner"/>
     <meta property="og:url" content="https://foxholeplanner.com/"/>
     <meta property="og:type" content="product"/>
     <meta property="og:description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
-    <meta property="og:image" content="https://foxholeplanner.com/assets/screenshot4.jpg"/>
+    <meta property="og:image" content="https://foxholeplanner.com/assets/screenshot5.jpg"/>
 
     <meta charset="utf-8">
     <base href="/">
@@ -95,13 +95,9 @@
 <div class="text-center" id="ui" style="position:absolute; overflow:hidden; transform-origin:0 0; top:0; left:0; color:white; z-index:90;">
     <div style="pointer-events:auto!important;">
         <div id="app"></div>
-
-        <div id="loading" class="text-center" style="margin:1px; position:relative; top:15vh; background:url('/assets/background.jpg'); background-color: #3f3f3f; background-position: center; background-size:cover;">
-            <img src="/assets/logo.webp" width="500"><br>
-            <br>
-            <i class="fa fa-refresh fa-spin fa-4x"></i><br>
-            <h3>LOADING</h3><br>
-            <br><br><br>
+        <div id="loading">
+            <div class="logo-icon"></div>
+            <h5>Loading</h5>
         </div>
     </div>
 </div>
