Added toggleable ranges and selection ranges. (Layers)

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Foxhole Planner</title>
-    <meta name="description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
+    <meta name="description" content="Create blueprints for bunkers, facilities, and more using this fan-made tool for the video game Foxhole."/>
 
     <meta property="og:title" content="Foxhole Planner"/>
     <meta property="og:url" content="https://foxholeplanner.com/"/>
     <meta property="og:type" content="product"/>
-    <meta property="og:description" content="This tool allows you to draw up plans for facilities from Foxhole's new Inferno update. It takes power and resource needs into account to help you efficiently design your facilities."/>
+    <meta property="og:description" content="Create blueprints for bunkers, facilities, and more using this fan-made tool for the video game Foxhole."/>
     <meta property="og:image" content="https://foxholeplanner.com/assets/screenshot5.jpg"/>
 
     <meta charset="utf-8">
