Updated README and cleanup.

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Foxhole Planner</title>
-    <meta name="description" content="Create blueprints for bunkers, facilities, and more using this fan-made tool for the video game Foxhole."/>
+    <meta name="description" content="Create blueprints for a bunker, facility, and more using this fan-made tool for the video game Foxhole. Formerly known as Foxhole Facility Planner, this tool now features facilities, bunkers, trenches, and more!"/>
 
     <meta property="og:title" content="Foxhole Planner"/>
     <meta property="og:url" content="https://foxholeplanner.com/"/>
     <meta property="og:type" content="product"/>
-    <meta property="og:description" content="Create blueprints for bunkers, facilities, and more using this fan-made tool for the video game Foxhole."/>
+    <meta property="og:description" content="Create blueprints for a bunker, facility, and more using this fan-made tool for the video game Foxhole. Formerly known as Foxhole Facility Planner, this tool now features facilities, bunkers, trenches, and more!"/>
     <meta property="og:image" content="https://foxholeplanner.com/assets/screenshot5.jpg"/>
 
     <meta charset="utf-8">
