Replaced building search with Fuse.js

--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,7 @@
 <script src="vendor/bezier.js"></script>
 <script src="vendor/SAT.js"></script>
 <script src="vendor/hitarea-shapes.min.js"></script>
+<script src="vendor/fuse.min.js"></script>
 
 <script src="filters.js"></script>
 <script src="games/foxhole/data.js"></script>
