--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,7 @@
 <script src="vendor/1pixi.min.js"></script>
 <script src="vendor/howler.min.js"></script>
 <script src="vendor/pixi-filters.js"></script>
+<script src="vendor/socket.io.min.js"></script>
 <script src="vendor/axios.min.js"></script>
 <script src="vendor/pixi-multistyle-text.min.js"></script>
 <script src="vendor/vue-dragscroll.min.js"></script>
@@ -151,6 +152,7 @@
 <script src="vendor/SAT.js"></script>
 <script src="vendor/hitarea-shapes.min.js"></script>
 <script src="vendor/fuse.min.js"></script>
+<script src="vendor/rhill-voronoi-core.min.js"></script>
 
 <script src="filters.js"></script>
 <script src="games/foxhole/data.js"></script>
